--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,11 @@
  <head>
   <title><%= title %></title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link rel='icon' href='../public/favicon.ico' type="image/x-icon"/>
+  <link rel='icon' href='favicon.ico' type="image/x-icon"/>
  </head>
   <body>
     <h1>Bienvenido a <%= title %></h1>
     <p>El portal donde pdra crear sus propios juegos!</p>
+    <p><a href="/quizes/question">Comience a Jugar</a></p>
   </body>
 </html>
