--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -8,6 +8,6 @@ body    { font: 16px; Georgia, serif; background: #999; }
 section			{ float: right; width: 80%; height: 200px; }
 section > div           { padding: 20%; }
 header, nav, section    { background: #eee; text-align: center; }
-footer                  { background: #eee; text-align: center; }
+footer                  { background: #eee; text-align: center; clear: both; display: block; }
 nav			{ float: left; width: 15%; height: 200px; }
 nav span                { margin: 0px 100px 0px 0px; }
