--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,7 +15,7 @@
   <body>
     <div id="page-wrap">
       <header class="main" id="h1">
-         <hd2>Quiz: el juego de las preguntas</hd2>
+         <hd2>Quiz<span>: el juego de las preguntas</span></hd2>
       </header>	
 
 	<nav class="main" id="n1" role="navigation">
@@ -24,12 +24,12 @@
 	</nav>
 
 	<section class="main" id="s1">
-	 <%- body %>
+	 <div><%- body %></div>
 	</section>
 
 	<footer class="main" id="f1">
 	  <a href="http://es.wikipedia.org/wiki/Quiz">
-	  ¿Que es un quiz?</a>
+	  Que es un quiz?</a>
 	</footer>
     </div>
   </body>
