--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -1,15 +1,7 @@
-*       { margin: 0; padding: 0; }
-body    { font: 16px; Georgia, serif; }
-body    { background #333; }
+body					{background: #333;}
 
-#page-wrap:after	{ content: "Smartphone Layout"; }
-#page-wrap              { margin: 2% auto; color: white; }
-#page-wrap > main       { border: 1px solid #999; padding: 1%; margin-bottom: 1px; color: black; }
+#page-wrap:after		{content: "Smartphone Layout";}
 
-h2 span, section h3	{ display: none; }
-body			{ font-size: xx-large; }
-section > div           { padding: 20%; }
-header, nav, section    { background: #eee; text-align: center; }
-footer                  { background: #eee; text-align: center; }
-nav span                { margin: 0px 10px 0px 0px; }
-footer, input		{ font-size: large; }
+h2 span, section h3		{display: none;}
+body					{font-size: xx-large; }
+footer, input			{font-size: large; }
