--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -1,13 +1,8 @@
-*       { margin: 0; padding: 0; }
-body    { font: 16px; Georgia, serif; background: #999; }
+body					{background: #999;}
 
-#page-wrap              { margin: 2% auto; color: white; }
-#page-wrap:after	{ content: "Wide Layout"; }
-#page-wrap > main       { border: 1px solid #999; padding: 1%; margin-bottom: 1px; color: black; }
+#page-wrap:after		{content: "Wide Layout";}
 
-section			{ float: right; width: 80%; height: 200px; }
-section > div           { padding: 20%; }
-header, nav, section    { background: #eee; text-align: center; }
-footer                  { background: #eee; text-align: center; clear: both; display: block; }
-nav			{ float: left; width: 15%; height: 200px; }
-nav span                { margin: 0px 100px 0px 0px; }
+nav						{float: left; width:15%; height: 200px; }
+nav span				{margin: 0px 100px 0px 0px;}
+section					{float: right; width:80%; height: 200px; }
+footer					{clear: both; display:block}
