--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,25 +2,26 @@
 <html>
  <head>
   <meta charset="utf-8"><title>Quiz</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel='stylesheet' type='text/css' href='/stylesheets/style.css' />
   <link rel='stylesheet'
 	type='text/css'
 	media='only screen and (min-width: 530px) and (min-device-width: 481px)'
 	href='/stylesheets/wide.css' />
   <link rel='stylesheet'
         type='text/css'
-        media='only screen and (min-width: 480px)'
+        media='only screen and (max-width: 480px)'
         href='/stylesheets/smartphone.css' /> 
  </head>
   <body>
     <div id="page-wrap">
       <header class="main" id="h1">
-         <hd2>Quiz<span>: el juego de las preguntas</span></hd2>
+         <h2>Quiz<span>: el juego de las preguntas</span></h2>
       </header>	
 
 	<nav class="main" id="n1" role="navigation">
 	 <span><a href="/">Inicio</a></span>
          <span><a href="/quizes/question">Preguntas</a></span>
+         <span><a href="/author">Autor</a></span>
 	</nav>
 
 	<section class="main" id="s1">
@@ -28,8 +29,8 @@
 	</section>
 
 	<footer class="main" id="f1">
-	  <a href="http://es.wikipedia.org/wiki/Quiz">
-	  Que es un quiz?</a>
+	  <a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un quiz?</a></span>
+	  <a href="https://github.com/aklinger/quiz">Repositorio en GitHub</a></span>
 	</footer>
     </div>
   </body>
