--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,7 @@
 	</section>
 
 	<footer class="main" id="f1">
-	  <a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un quiz?</a></span>
+	  <a href="http://es.wikipedia.org/wiki/Quiz">Que es un quiz?</a></span>
 	  <a href="https://github.com/aklinger/quiz">Repositorio en GitHub</a></span>
 	</footer>
     </div>
