--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,7 @@
 <h3>Bienvenido a <%= title %></h3>
-<p>El portal donde podrá crear sus propios juegos!</p>
+<p>El portal donde podra crear sus propios juegos!</p>
+
+<form method="get" action="/quizes">
+      <input type="text" name="search" value="texto_a_buscar" />
+      <input type="submit" value="Enviar">
+     </form>
