--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
 <h3>Bienvenido a <%= title %></h3>
-<p>El portal donde podra crear sus propios juegos!</p>
+<p>El portal donde podrá crear sus propios juegos!</p>
 
-<form method="get" action="/quizes">
-      <input type="text" name="search" value="texto_a_buscar" />
+ <label>Buscar pregunta: </label>
+           <form method="get" action="/quizes">
+      <input type="text" name="search" value=""/>
       <input type="submit" value="Enviar">
-     </form>
+      </form>
