--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,3 +1,3 @@
 <h3>Bienvenido a <%= title %></h3>
-<p>Autor: Adrian Klinger</p>
-<img src="/images/Photo_Adrian.JPG" alt="Foto del Autor" style="width:20%; height:20%;">
+<p>Autor: Adrián Klinger</p>
+<img src="/images/Photo_Adrian.JPG" alt="Foto del Autor" style="width:10%; height:10%;">
