--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,8 +29,9 @@
 	</section>
 
 	<footer class="main" id="f1">
-	  <a href="http://es.wikipedia.org/wiki/Quiz">Que es un quiz?</a></span>
-	  <a href="https://github.com/aklinger/quiz">Repositorio en GitHub</a></span>
+	  <span><a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un quiz?</a></span>
+    <span>&nbsp;</span>
+	  <span><a href="https://github.com/aklinger/quiz">Repositorio en GitHub</a></span>
 	</footer>
     </div>
   </body>
