--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,3 @@
 <h3>Bienvenido a <%= title %></h3>
 <p>El portal donde podrá crear sus propios juegos!</p>
-
- <label>Buscar pregunta: </label>
-           <form method="get" action="/quizes">
-      <input type="text" name="search" value=""/>
-      <input type="submit" value="Enviar">
-      </form>
+<img src="/images/rayo.png" alt="rayo" style="width:10%; height:10%;">
