--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,7 +18,7 @@
          <h2>Quiz<span>: el juego de las preguntas</span></h2>
       </header>	
 
-	<nav class="main" id="n1" role="navigation">
+	<nav class="main" id="n1" role="navigation" align: left;>
 	 <span><a href="/">Inicio</a></span>
          <span><a href="/quizes">Preguntas</a></span>
          <span><a href="/author">Autor</a></span>
