--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,17 +1,24 @@
-<table text-align="left">
-<tr><td>
  <label>Buscar pregunta: </label>
            <form method="get" action="/quizes">
       <input type="text" name="search" value=""/>
       <input type="submit" value="Enviar">
       </form>
-</td></tr>
-
+</p>
+<table>
   <% var i; for (i=0; i < quizes.length; i++) { %> 
-   <tr><td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
+   <tr>
+   <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+   <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+        <td>
+          <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
+            <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+              borrar
+            </button>
+          </form>
+        </td>
+   </tr>
    <% } %>
-
-<tr><td>
+</table>
+</p>
 <a href="/quizes/new"><button type="button">Crear preguta</button></a>
-</td></tr>
-</table>  
+  
