--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,3 +1,3 @@
-<h3>Bienvenido a <%= title %></h3>
-<p>Autor: Adrián Klinger</p>
+<h3>Autores</h3>
+<p>Nombre: <%= nombre %> </p>
 <img src="/images/Photo_Adrian.JPG" alt="Foto del Autor" style="width:10%; height:10%;">
