--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,3 +1,12 @@
+<label>Área temática:</label>
+<select name="quiz[tema]" id="tema" value="<%= quiz.tema %>">
+ <option value="" disabled selected>Seleciona tu tema</option>
+ <option name="Otro" value="Otro">Otro</option>
+ <option name="Humanidades" value="Humanidades">Humanidades</option>
+ <option name="Ocio" value="Ocio">Ocio</option>
+ <option name="Ciencia" value="Ciencia">Ciencia</option>
+ <option name="Tecnología" value="Tecnología">Tecnología</option>
+</select></br></br>
 <label for="preg" class="rem">Pregunta:</label>
 <input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/> <p>
 <label for="resp" class="rem">Respuesta:</label>
