--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -4,12 +4,14 @@
       <input type="submit" value="Enviar">
       </form>
 </p>
+
 <table>
-  <% var i; for (i=0; i < quizes.length; i++) { %> 
-   <tr>
-   <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
-   <td><i>(<%= quizes[i].tema %>)</i></td>
-   <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+  <% var i; for (i=0; i < quizes.length; i++) { %>        
+    <tr>
+      <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+      <td><i>(<%= quizes[i].tema %>)</i></td> 
+     <%if(session.user){%> 
+        <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
         <td>
           <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
             <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
@@ -17,9 +19,11 @@
             </button>
           </form>
         </td>
-   </tr>
-   <% } %>
+        <%}%>
+    </tr> 
+  <% } %>
 </table>
-</p>
-<a href="/quizes/new"><button type="button">Crear preguta</button></a>
-  
+<p/>
+<%if(session.user){%>
+  <a href="/quizes/new"><button>Crear pregunta</button></a>
+<%}%>
